--- a/index.html
+++ b/index.html
@@ -759,8 +759,8 @@
 				<span class="level-modal__number"><img src="img/knight-with-hair.png" alt=""></span>
 
 				<div class="level-modal__greeting-wrapper">
-					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
-					<h4 class="level-modal__level">Уровень</h4>
+					<h3 class="level-modal__greeting">Поздравляем! У вас особый уровень</h3>
+					<h4 class="level-modal__level">Dark knight</h4>
 				</div>
 			</div>
 			<span class="level-modal__up-text">Вам доступно:</span>
