--- a/tournament.html
+++ b/tournament.html
@@ -87,7 +87,9 @@
 			<div class="tournament__wrapper">
 				<h1 class="tournament__header">Турнир <span>1000$</span> каждую пятницу</h1>
 
-				<p class="tournament__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+				<p class="tournament__text">Правила: <br>Турнир проводится по пятницам с 01:00 до 23:00 (МСК). В турнире принимают участие все клиенты Казино, которые сделали депозит в пятницу после 01:00(МСК) В турнире участвуют все игры из разделов «Слоты». Победители турнира определяются автоматически, исходя из самого крупного значения среднего выигрыша за время турнира.</p>
+
+				<a href="#" class="tournament__rules">Правила</a>
 
 				<div class="conditions">
 					<div class="conditions__wrapper">
@@ -146,7 +148,7 @@
 				</div>
 
 				<div class="tables__condition-wrapper">
-					<p class="tables__condition">Все выигрыши требуют отыгрыша х3 , кроме первого места . Первое место не требует отыгрыша</p>
+					<p class="tables__condition">Все выигрыши требуют отыгрыша х3, в течении 30-ти дней после его начисления.</p>
 				</div>
 
 				<div class="places-table">
