--- a/tournament.html
+++ b/tournament.html
@@ -353,6 +353,8 @@
 									<td class="places-table__cell">77777.7</td>
 								</tr>
 							</table>
+
+							<button class="places-tournament__more-button">Показать больше</button>
 						</div>
 					</div>
 				</div>
