new text & link in slider

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
 								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
 								<span class="registration-bonus__count">1800$</span>
+								<a href="bonus.html" class="registration-bonus__details">Подробнее</a>
 							</div>
 
 							<div class="registration__character-wrapper">
