--- a/partners.html
+++ b/partners.html
@@ -87,7 +87,7 @@
 			<section class="partner">
 				<div class="partner__wrapper">
 					<div class="partner__text-wrapper">
-						<p class="partner__text">Стань партнером и получай до <span>45% от дохода</span> приведенного игрока уже через месяц с помощью нашей уникальной программы</p>
+						<p class="partner__text">Стань партнером и получай до 45% с помощью нашей уникальной программы и до 1500$ за прохожодение уровней</p>
 						<button class="partner__button">Узнать больше</button>
 					</div>
 
