--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-button">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
 						</ul>
 
@@ -789,6 +789,19 @@
 		</div>
 
 		<div class="level-modal__close"></div>
+	</section>
+
+	<section class="modal-rules">
+		<div class="modal-rules__wrapper">
+			<h1 class="modal-rules__header">Правила и условия</h1>
+			<h2 class="modal-rules__underheader">1. Общие положения</h2>
+			<ul class="modal-rules__list">
+				<li class="modal-rules__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
+				<li class="modal-rules__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
+				<li class="modal-rules__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
+				<li class="modal-rules__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+			</ul>
+		</div>
 	</section>
 
 	<div class="level-modal-bg"></div>
