--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
 </head>
 <body>
 	
@@ -67,8 +67,9 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-button">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -108,7 +109,7 @@
 					<div class="dignity">
 						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
-						<h3 class="dignity__header">Доверие</h3>
+							<h3 class="dignity__header">Доверие</h3>
 							<p class="dignity__text">Нам доверяют сотни игроков каждый день, благодаря лицензионным играм и нашей собственной лицензией предоставляемой...</p>
 						</div>
 					</div>
@@ -292,6 +293,8 @@
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
 							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
+							<li class="games__item games__item--rules">Правила и условия</li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -409,7 +412,7 @@
 			</form>
 		</div>
 
-		<div class="modal__close"></div>
+		<div class="modal-close"></div>
 	</section>
 
 	<section class="modal modal--enter">
@@ -440,7 +443,7 @@
 			<button class="modal-form__forgot-pass">Я забыл пароль</button>
 		</div>
 
-		<div class="modal__close"></div>
+		<div class="modal-close"></div>
 	</section>
 
 	<section class="modal modal--contact">
@@ -458,7 +461,7 @@
 			</form>
 		</div>
 
-		<div class="modal__close"></div>
+		<div class="modal-close"></div>
 	</section>
 
 	<section class="modal modal--recovery">
@@ -475,7 +478,7 @@
 			<span class="modal-form__not-recieve">Не получили инструкций для подтверждения?</span>
 		</div>
 
-		<div class="modal__close"></div>
+		<div class="modal-close"></div>
 	</section>
 
 	<section class="modal modal--new-password">
@@ -488,10 +491,32 @@
 			</form>
 		</div>
 
-		<div class="modal__close"></div>
+		<div class="modal-close"></div>
 	</section>
-
 	<div class="modal-bg"></div> 
+
+	<section class="modal-about modal-about--rules">
+		<div class="modal-about__wrapper">
+			<h1 class="modal-about__header">Правила и условия</h1>
+			<div class="modal-about__scroll-content">
+				<h2 class="modal-about__underheader">1. Общие положения</h2>
+				<ul class="modal-about__list">
+					<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
+					<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
+					<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
+					<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+				</ul><h2 class="modal-about__underheader">1. Общие положения</h2>
+				<ul class="modal-about__list">
+					<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
+					<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
+					<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
+					<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="modal-close modal-close--out"></div>
+	</section>
 
 	<div id="preloader"></div>
 
@@ -564,6 +589,14 @@
 	<script type="text/javascript" src="js/jquery.viewportchecker.min.js"></script>
 
 	<script type="text/javascript" src="js/animation-delay.js"></script>
+
+	<script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+
+	<script>
+		$(window).on("load",function(){
+			$(".modal-about__scroll-content").mCustomScrollbar();
+		});
+	</script>
 
 </body>
 </html>
