modal for policy

--- a/partners.html
+++ b/partners.html
@@ -67,8 +67,8 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-button">Правила и условия</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
 							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
@@ -162,16 +162,6 @@
 			</div>
 		</section>
 
-		<!-- <section class="prize">
-			<div class="prize__wrapper">
-				<h2 class="prize__header">И это еще не все</h2>
-				<span class="prize__back-text">#фортуна</span>
-				<p class="prize__text">Так же между партнерами случайным образом мы розыграем 5000$!</p>
-				<p class="prize__undertext">*В Акции принимают участие все партнеры достигшие 2-го и выше уровня по итогам месяца.</p>
-				<button class="prize__button">Узнать больше</button>
-			</div>
-		</section> -->
-
 		<section class="games">
 			<div class="games__wrapper">
 
@@ -206,7 +196,7 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
+							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
 							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
@@ -413,6 +403,29 @@
 	<section class="modal-about modal-about--rules">
 		<div class="modal-about__wrapper">
 			<h1 class="modal-about__header">Правила и условия</h1>
+			<div class="modal-about__scroll-content">
+				<h2 class="modal-about__underheader">1. Общие положения</h2>
+				<ul class="modal-about__list">
+					<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
+					<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
+					<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
+					<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+				</ul><h2 class="modal-about__underheader">1. Общие положения</h2>
+				<ul class="modal-about__list">
+					<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
+					<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
+					<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
+					<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="modal-close modal-close--out"></div>
+	</section>
+
+	<section class="modal-about modal-about--policy">
+		<div class="modal-about__wrapper">
+			<h1 class="modal-about__header">Политика конфиденциальности</h1>
 			<div class="modal-about__scroll-content">
 				<h2 class="modal-about__underheader">1. Общие положения</h2>
 				<ul class="modal-about__list">
